# Winternitz-OTS

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: example_usage.rs
src/: bin.rs  lib.rs  wots.rs
tests/: integration_test.rs
