[package]
name = "winternitz-ots"
version = "0.1.0"
authors = ["0xSilene <51803887+0xSilene@users.noreply.github.com>"]
edition = "2018"
description = "A Rust Library For Interacting With Winternitz One-Time Signatures, a Hash-Based, Post-Quantum Digital Signature Scheme Based On Lamport Signatures. This implementation uses the hash function Blake2b for all hashing, due to its speed and security, with a winternitz parameter of 16, and a digest size (n) of 32 bytes."
repository = "https://github.com/0xSilene/Winternitz-OTS"
readme = "https://github.com/0xSilene/Winternitz-OTS/blob/master/README.md"
keywords = ["crypto", "cryptography", "post-quantum", "security", "signature"]
categories = ["cryptography", "authentication","algorithms"]
license = "MIT AND Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.0"
getrandom = "0.1.13"
blake2-rfc = "0.2.18"