[package]
name = "winternitz-ots"
version = "0.2.0"
authors = ["0xAtropine"]
edition = "2018"
description = "A Rust Library For Interacting With Winternitz One-Time Signatures, a Hash-Based, Post-Quantum Digital Signature Scheme Based On Lamport Signatures. This implementation uses the hash function Blake2b for all hashing, due to its speed and security, with a winternitz parameter of 16, and a digest size (n) of 32 bytes."
repository = "https://github.com/0xAtropine/Winternitz-OTS"
keywords = ["crypto", "cryptography", "post-quantum", "security", "signature"]
categories = ["cryptography", "authentication","algorithms"]
license = "Apache-2.0"
readme="README.md"

[[example]]
name = "1"
path = "examples/example_usage.rs"

[badges]
travis-ci = { repository = "https://github.com/0xAtropine/Winternitz-OTS", branch = "master" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Data Format
hex = "0.4.2"

# Randomness
# Was 0.1.4
getrandom = "0.2.2"

# Crypto
blake2-rfc = "0.2.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }